Adicionando divisões na página principal.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,48 @@
 <!DOCTYPE html>
 <html>
-<head></head>
-<body></body>
+<head>
+    <meta charset="utf-8">
+    <title>Digital Centaur</title>
+    <link rel="stylesheet" type="text/css" href="_css/estilo.css">
+</head>
+<body>
+<div id="img_principal">
+    <img src="_img/circuito_azul_grande.jpg">
+    <p>Dependendo da aplicação, arestas podem ou não ter direção, pode ser permitido ou não arestas ligarem um vértice a
+        ele
+        próprio e vértices e/ou arestas podem ter um peso (numérico) associado. Se as arestas têm uma direção assciada
+        (indicada por uma seta na representação gráfica) temos um dígrafo (grafo orientado). Um grafo com um único
+        vértice e
+        sem arestas é conhecido como grafo trivial.</p>
+</div>
+============================================================
+<div id="img_secundaria">
+    <p>Dependendo da aplicação, arestas podem ou não ter direção, pode ser permitido ou não arestas ligarem um vértice a
+        ele
+        próprio e vértices e/ou arestas podem ter um peso (numérico) associado. Se as arestas têm uma direção associada
+        (indicada por uma seta na representação gráfica) temos um dígrafo (grafo orientado). Um grafo com um único
+        vértice e
+        sem arestas é conhecido como grafo trivial.</p>
+    <img src="_img/circuito_azul_pequeno.jpg"
+         ------------------------------------------------------------
+    <p>Dependendo da aplicação, arestas podem ou não ter direção, pode ser permitido ou não arestas ligarem um vértice a
+        ele
+        próprio e vértices e/ou arestas podem ter um peso (numérico) associado. Se as arestas têm uma direção associada
+        (indicada por uma seta na representação gráfica) temos um dígrafo (grafo orientado). Um grafo com um único
+        vértice e
+        sem arestas é conhecido como grafo trivial.</p>
+    <img src="_img/circuito_verdel_pequeno.jpg">
+    ------------------------------------------------------------
+    <p>Dependendo da aplicação, arestas podem ou não ter direção, pode ser permitido ou não arestas ligarem um vértice a
+        ele
+        próprio e vértices e/ou arestas podem ter um peso (numérico) associado. Se as arestas têm uma direção associada
+        (indicada por uma seta na representação gráfica) temos um dígrafo (grafo orientado). Um grafo com um único
+        vértice e
+        sem arestas é conhecido como grafo trivial.</p>
+    <img src="_img/circuito_azul_pequeno.jpg">
+</div>
+
+
+----------------------------------------------------------
+</body>
 </html>
